# aic

./: Cargo.toml  README.md  lefthook.yml  mise.toml  renovate.json
.github/prompts/: rust.prompt.md
.github/scripts/: install-llvm.ts
.github/workflows/: ci.yml
docs/: roadmap.md  spec.md
examples/: function.aic  invalid_operator.aic  missing_paren.aic  simple.aic
src/: ast.rs  codegen.rs  lib.rs  main.rs  parser.rs  token.rs
src/snapshots/: aic__parser__tests__parse_assignment.snap  aic__parser__tests__parse_binary_expression.snap  aic__parser__tests__parse_complex_expression.snap  aic__parser__tests__parse_error_recovery.snap  aic__parser__tests__parse_function_call.snap  aic__parser__tests__parse_function_declaration.snap  aic__parser__tests__parse_function_with_multiple_statements.snap  aic__parser__tests__parse_if_statement.snap  aic__parser__tests__parse_if_statement_with_else.snap  aic__parser__tests__parse_if_statement_with_else_if_chain.snap  aic__parser__tests__parse_if_statement_with_nested_else.snap  aic__parser__tests__parse_integer_literal.snap  aic__parser__tests__parse_mutable_variable_declaration_without_type.snap  aic__parser__tests__parse_mutable_variable_declaration_without_value.snap  aic__parser__tests__parse_unary_expression.snap  aic__parser__tests__parse_variable_declaration.snap  aic__parser__tests__parse_variable_declaration_without_type.snap  aic__parser__tests__parse_variable_declaration_without_value.snap  aic__parser__tests__parse_with_comments.snap
tests/: integration_compile_and_run.rs
tests/fixtures/: comments.aic  (+12 more)
(+1 files in other folders)
