[package]
name = "aic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chumsky = "0.10.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
  "llvm14-0",
] }
clap = { version = "4.4", features = ["derive"] }
logos = "0.15.0"
ariadne = "0.5.1"
serde = { version = "1.31.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }
pretty_assertions = "1.4.1"
