[package]
name = "aic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chumsky = "0.10.1"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
clap = { version = "4.4", features = ["derive"] }
logos = "0.15.0"
ariadne = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
indoc = "=2.0.6"
insta = { version = "=1.43.0", features = ["yaml"] }
pretty_assertions = "=1.4.1"
tempfile = "=3.19.1"
